force-app/main/default/objects/SBQQ__ProductOption__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Cantidad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>