force-app/main/default/objects/SBQQ__ProductOption__c/fields/BundleFamily__c.field-meta.xml
<CustomField>
    <fullName>BundleFamily__c</fullName>
    <description>Familia del Bundle al que pertenece Product Option</description>
    <formula>TEXT(SBQQ__ConfiguredSKU__r.Family)</formula>
    <label>Familia Bundle</label>
    <type>Text</type>
</CustomField>