force-app/main/default/objects/SBQQ__ProductOption__c/fields/TankName__c.field-meta.xml
<CustomField>
    <fullName>TankName__c</fullName>
    <label>Nombre Depósito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SM1000A</fullName>
            </value>
            <value>
                <fullName>LP33600A</fullName>
            </value>
            <value>
                <fullName>LP33600E</fullName>
            </value>
            <value>
                <fullName>PRIMATEC</fullName>
            </value>
            <value>
                <fullName>ETERNELLA</fullName>
            </value>
            <value>
                <fullName>LP2450A</fullName>
            </value>
            <value>
                <fullName>LP2450E</fullName>
            </value>
            <value>
                <fullName>LP4000A</fullName>
            </value>
            <value>
                <fullName>LP8334E</fullName>
            </value>
            <value>
                <fullName>LP10000A</fullName>
            </value>
            <value>
                <fullName>LP10000E</fullName>
            </value>
            <value>
                <fullName>LP13000A</fullName>
            </value>
            <value>
                <fullName>LP13000E</fullName>
            </value>
            <value>
                <fullName>LP16000A</fullName>
            </value>
            <value>
                <fullName>LP16000E</fullName>
            </value>
            <value>
                <fullName>LP4000E</fullName>
            </value>
            <value>
                <fullName>LP4880A</fullName>
            </value>
            <value>
                <fullName>LP4880E</fullName>
            </value>
            <value>
                <fullName>LP6650A</fullName>
            </value>
            <value>
                <fullName>LP6650E</fullName>
            </value>
            <value>
                <fullName>LP8334A</fullName>
            </value>
            <value>
                <fullName>LP19000A</fullName>
            </value>
            <value>
                <fullName>LP19000E</fullName>
            </value>
            <value>
                <fullName>LP24450A</fullName>
            </value>
            <value>
                <fullName>LP24450E</fullName>
            </value>
            <value>
                <fullName>RE4300A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>